Homework for Video 80

--- a/BlazorMovies/Client/Pages/Index.razor
+++ b/BlazorMovies/Client/Pages/Index.razor
@@ -1,29 +1,30 @@
 ﻿@page "/"
 @page "/index"
-@inject IRepository repository
+@inject IMoviesRepository repository
 
 <div>
-    <h3>Movie</h3>
-    <MoviesList Movies="movies" />
+    <h3>In Theaters</h3>
+    <MoviesList Movies="InTheaters" />
 </div>
 
-<CustomTypeahead SearchMethod="SearchMethod">
-    <ResultTemplate>
-        @context
-    </ResultTemplate>
-</CustomTypeahead>
+<div>
+    <h3>Up Coming</h3>
+    <MoviesList Movies="UpComingRelease" />
+</div>
+
 
 @code{
-    private List<Movie> movies;
+    private List<Movie> InTheaters;
+    private List<Movie> UpComingRelease;
+
+
     protected async override Task OnInitializedAsync()
     {
-        movies =  repository.GetMovies();
+        var response = await repository.GetIndexPageDTO();
+        InTheaters = response.InTheateres;
+        UpComingRelease = response.UpcomingReleases;
+
     }
 
-    private async Task<IEnumerable<string>> SearchMethod(string searchText)
-    {
-        await Task.Delay(2000);
-        if (searchText == "test") { return Enumerable.Empty<string>(); }
-        return new List<string>() { "Felipe", "Gavilanch2" };
-    }
+
 }
