--- a/BlazorMovies/Client/Pages/Genres/EditGenre.razor
+++ b/BlazorMovies/Client/Pages/Genres/EditGenre.razor
@@ -1,4 +1,6 @@
 ﻿@page "/genre/edit/{GenreId:int}"
+@inject IGenreRepository genreRepository
+@inject NavigationManager navManager
 
 <h3>EditGenre</h3>
 
@@ -11,15 +13,15 @@
     [Parameter] public int GenreId { get; set; }
     public Genre genre;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        genre = new Genre() { Id = GenreId, Name = "Comedy" };
+        genre = await genreRepository.GetGenre(GenreId);
     }
 
     private void Edit()
     {
-        Console.WriteLine("Edit method");
-        Console.WriteLine($"Id = {genre.Id}");
-        Console.WriteLine($"Name = {genre.Name}");
+        genreRepository.UpdateGenre(genre);
+        navManager.NavigateTo("genres");
+
     }
 }
