--- a/BlazorMovies/Client/Pages/Genres/IndexGenres.razor
+++ b/BlazorMovies/Client/Pages/Genres/IndexGenres.razor
@@ -1,11 +1,61 @@
 ﻿@page "/genres"
-
+@inject IGenreRepository genreRepository
 <h3>Index Genres</h3>
 
 <div class="form-group">
     <a class="btn btn-info" href="genre/create">New Genre</a>
 </div>
+<GenericList List="genreList">
+    <WholeListTemplate>
+           <table class="table table-striped">
+               <thead>
+                   <tr>
+                       <th></th>
+                       <th>Name</th>
+                   </tr>
+                </thead>
+               <tbody>
+                   @foreach (var item in genreList)
+                   {
+                       <tr>
+                           <td>
+                               <a class="btn btn-success" href="/genre/edit/@item.Id">Edit</a>
+                               <button class="btn btn-danger" @onclick="@(() => DeleteGenres(item.Id))">Delete</button>
+                           </td>
+                           <td>
+                               @item.Name
+                           </td>
+                       </tr>
+                   }
+               </tbody>
+           </table>
+
+    </WholeListTemplate>
+</GenericList>
 
 @code {
+
+    List<Genre> genreList;
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        try
+        {
+            genreList = await genreRepository.GetGenres();
+        }
+        catch(Exception ex)
+        {
+
+        }
+    }
+
+    private async Task DeleteGenres(int Id)
+    {
+        
+         await genreRepository.DeleteGenre(Id);
+         genreList = await genreRepository.GetGenres();
+    }
+
 
 }
