--- a/BlazorMovies/Client/Pages/Movies/MovieFilter.razor
+++ b/BlazorMovies/Client/Pages/Movies/MovieFilter.razor
@@ -1,82 +1,160 @@
 ﻿@page "/movies/search"
-@inject IRepository repository
+@inject IMoviesRepository moviesRepository
+@inject IGenreRepository genreRepository 
+@inject NavigationManager navigationManager
 
 <h3>Search Movies</h3>
 
-<div class="form-inline">
-    <div class="form-group mb-2">
-        <label for="title" class="sr-only">Title</label>
-        <input type="text" class="form-control" id="title" placeholder="Movie Title"
-               @bind-value="title" @bind-value:event="oninput"
-               @onkeypress="@((KeyboardEventArgs e) => TitleKeyPress(e))" />
-    </div>
-    <div class="form-group mx-sm-3 mb-2">
-        <select class="form-control" @bind="selectedGenre">
-            <option value="0">
-                --Select a Genre--
-            </option>
-            @foreach (var genre in Genres)
-            {
-                <option value="@genre.Id">@genre.Name</option>
-            }
-        </select>
-    </div>
-    <div class="form-group mx-sm-3 mb-2">
-        <input type="checkbox" class="form-check-input" id="upcomingReleases" @bind="upcomingReleases" />
-        <label class="form-check-label" for="upcomingReleases">
-            Upcoming Releases
-        </label>
-    </div>
-    <div class="form-group mx-sm-3 mb-2">
-        <input type="checkbox" class="form-check-input" id="upcomingReleases" @bind="inTheaters" />
-        <label class="form-check-label" for="inTheaters">
-            In Theaters
-        </label>
-    </div>
 
-    <button type="button" class="btn btn-primary mb-2 mx-sm-3" @onclick="SearchForMovies">Filter</button>
-    <button type="button" class="btn btn-danger mb-2" @onclick="Clear">Clear</button>
-</div>
+<EditForm Model="filterMoviesDTO">
+    <div class="form-inline">
+        <div class="form-group mb-2">
+            <label for="title" class="sr-only">Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Movie Title"
+                   @bind-value="filterMoviesDTO.Title" @bind-value:event="oninput"
+                   @onkeypress="@((KeyboardEventArgs e) => TitleKeyPress(e))" />
+        </div>
+        <div class="form-group mx-sm-3 mb-2">
+            <select class="form-control" @bind="filterMoviesDTO.GenreId">
+                <option value="0">
+                    --Select a Genre--
+                </option>
+                @foreach (var genre in Genres)
+                {
+                    <option value="@genre.Id">@genre.Name</option>
+                }
+            </select>
+        </div>
+        <div class="form-group mx-sm-3 mb-2">
+            <input type="checkbox" class="form-check-input" id="upcomingReleases" @bind="filterMoviesDTO.UpComingReleases" />
+            <label class="form-check-label" for="upcomingReleases">
+                Upcoming Releases
+            </label>
+        </div>
+        <div class="form-group mx-sm-3 mb-2">
+            <input type="checkbox" class="form-check-input" id="upcomingReleases" @bind="filterMoviesDTO.InTheaters" />
+            <label class="form-check-label" for="inTheaters">
+                In Theaters
+            </label>
+        </div>
 
+        <button type="button" class="btn btn-primary mb-2 mx-sm-3" @onclick="SearchForMovies">Filter</button>
+        <button type="button" class="btn btn-danger mb-2" @onclick="Clear">Clear</button>
+    </div>
+</EditForm>
 <MoviesList Movies="Movies"></MoviesList>
+<Pagination CurrentPage="filterMoviesDTO.Page" TotalAmountPages="totalAmountOfPages" SelectedPage="SelectedPage"/>
 
 @code {
+
+    private FilterMoviesDTO filterMoviesDTO = new FilterMoviesDTO();
     private List<Movie> Movies;
-    string title = "";
-    string selectedGenre = "0";
-    bool upcomingReleases = false;
-    bool inTheaters = false;
-    private List<Genre> Genres = new List<Genre>() { new Genre() { Id = 1, Name = "Action"},
-    new Genre(){Id = 2, Name = "Comedy"}};
+    private int totalAmountOfPages;
+    private List<Genre> Genres = new List<Genre>();
 
-    protected override void OnInitialized()
+
+    protected async override Task OnInitializedAsync()
     {
-        Movies = repository.GetMovies();
+
+        var queryStrings = navigationManager.GetQueryStrings(navigationManager.Uri);
+        Genres = await genreRepository.GetGenres();
+        if (queryStrings != null)
+        {
+            FillFilterWithQueryStrings(queryStrings);
+        }
+        await LoadMovies();
+
     }
 
-    private void SearchForMovies()
+
+    private void FillFilterWithQueryStrings(Dictionary<string, string> queryStrings)
     {
-        Movies = repository.GetMovies().Where(x => x.Title.Contains(title)).ToList();
-        Console.WriteLine($"title: {title}");
-        Console.WriteLine($"selectedGenre: {selectedGenre}");
-        Console.WriteLine($"upcomingReleases: {upcomingReleases}");
-        Console.WriteLine($"inTheaters: {inTheaters}");
+        if (queryStrings.ContainsKey("genreId"))
+        {
+            filterMoviesDTO.GenreId = int.Parse(queryStrings["genreId"]);
+        }
+
+        if (queryStrings.ContainsKey("title"))
+        {
+            filterMoviesDTO.Title = queryStrings["title"];
+        }
+
+        if (queryStrings.ContainsKey("intheaters"))
+        {
+            filterMoviesDTO.UpComingReleases = bool.Parse(queryStrings["intheaters"]);
+        }
+
+        if (queryStrings.ContainsKey("upcomingReleases"))
+        {
+            filterMoviesDTO.UpComingReleases = bool.Parse(queryStrings["upcomingReleases"]);
+        }
+
+        if (queryStrings.ContainsKey("page"))
+        {
+            filterMoviesDTO.Page = int.Parse(queryStrings["page"]);
+        }
     }
 
-    private void Clear()
+    private async Task LoadMovies()
     {
-        Movies = repository.GetMovies();
-        title = "";
-        selectedGenre = "0";
-        upcomingReleases = false;
-        inTheaters = false;
+        var queryString = GenerateQueryString();
+        if (!string.IsNullOrWhiteSpace(queryString))
+        {
+            queryString = $"?{queryString}";
+            navigationManager.NavigateTo("movies/search" + queryString);
+        }
+
+        var paginatedResponse = await moviesRepository.GetMoviesFiltered(filterMoviesDTO);
+        Movies = paginatedResponse.Response;
+        totalAmountOfPages = paginatedResponse.TotalAmountOfPages;
+        
     }
 
-    private void TitleKeyPress(KeyboardEventArgs e)
+    private string GenerateQueryString()
+    {
+        var queryStringsDict = new Dictionary<string, string>();
+        queryStringsDict["genreId"] = filterMoviesDTO.GenreId.ToString();
+        queryStringsDict["title"] = filterMoviesDTO.Title ?? "";
+        queryStringsDict["intheaters"] = filterMoviesDTO.InTheaters.ToString();
+        queryStringsDict["upcomingReleases"] = filterMoviesDTO.UpComingReleases.ToString();
+        queryStringsDict["page"] = filterMoviesDTO.Page.ToString();
+
+        var defaultValue = new List<string>() { "false", "", "0" };
+
+        // genreId=4&title=spider....
+
+        return string.Join("&", queryStringsDict
+            .Where(x => !defaultValue.Contains(x.Value.ToLower()))
+            .Select(x => $"{x.Key}={System.Web.HttpUtility.UrlEncode(x.Value)}").ToArray());
+    }
+
+    private async Task SelectedPage(int page)
+    {
+        filterMoviesDTO.Page = page;
+        await LoadMovies();
+
+    }
+
+    private async Task SearchForMovies()
+    {
+        await LoadMovies();
+    }
+
+    private async Task Clear()
+    {
+        //  Movies = repository.GetMovies();
+        filterMoviesDTO.Title = "";
+        filterMoviesDTO.GenreId = 0;
+        filterMoviesDTO.UpComingReleases = false;
+        filterMoviesDTO.InTheaters = false;
+        await LoadMovies();
+    }
+
+    private async Task TitleKeyPress(KeyboardEventArgs e)
     {
         if (e.Key == "Enter")
         {
-            SearchForMovies();
+            await SearchForMovies();
         }
     }
 }
