--- a/BlazorMovies/Client/Pages/People/PersonForm.razor
+++ b/BlazorMovies/Client/Pages/People/PersonForm.razor
@@ -23,11 +23,7 @@
     </div>
 
     <div class="form-group form-markdown">
-        <InputMarkdown 
-                       @bind-Value="Person.Biography"
-                       Label="Biography"
-                       For="@(() => Person.Biography)"
-                       />
+        <InputMarkdown  @bind-Value="Person.Biography" Label="Biography"  For="@(() => Person.Biography)" />
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
