--- a/BlazorMovies/Client/_Imports.razor
+++ b/BlazorMovies/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using BlazorMovies.Client.Helpers
 @using BlazorMovies.Shared.Entities
 @using BlazorMovies.Client.Repository
+@using BlazorMovies.Shared.DTOs
