Attempt at debugging

--- a/BlazorMovies/Client/Pages/People/DetailsPerson.razor
+++ b/BlazorMovies/Client/Pages/People/DetailsPerson.razor
@@ -48,8 +48,8 @@ else
     protected async override Task OnInitializedAsync()
     {
 
-        
 
+        Console.WriteLine("OnIntializedAsync() from detailspeson.razor");
         model = await personRepository.GetDetailsPersonDTO(PersonId);
 
 
